Reach the dogfood point (#6)
Remaining milestones move into tikka (map TIK-1), with the repository bound to project TIK.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>